syntax = "proto3";

package basic;

service FooService
{
    rpc Foo (FooRequest) returns (FooReply) {}
}

message FooRequest
{
    string value = 1;
}

message FooReply
{
    string value = 1;
}
